--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # Required metadata
-sonar.projectKey=java-sonar-simple
+sonar.projectKey=Demp_sample
 sonar.projectName=Simple Java project analyzed with the SonarQube Scanner
 sonar.projectVersion=1.0
 
