--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
 sonar.projectKey=Demp_sample
-sonar.projectName=Simple Java project analyzed with the SonarQube Scanner
+sonar.projectName=Demp_sample project analyzed with the SonarQube Scanner
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
